# ISA_project_RSS_reader

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
files/: atom_file.xml  bad_encoding.txt  complex4.xml  cpp_chunked.xml  cpp_not_chunked.xml  dechunked.atom  dechunked.rss  feedfile.txt  temp_file.xml  urls.txt
scripts/: build.Dockerfile  build.sh
src/: CMakeLists.txt  main.cpp
src/include/: constants.h
src/include/feed_downloader/: feeddownloader.cpp  feeddownloader.h
src/include/parameter_parser/: parametercheckers.cpp  parametercheckers.h  parametercontainer.cpp  parametercontainer.h  parameterparser.cpp  parameterparser.h
src/include/urlParser/: urlparser.cpp  urlparser.h
src/include/utils/: exceptions.cpp  exceptions.h  logger.h  utils.cpp  utils.h
src/include/xmlparser/: xmlnode.cpp  xmlnode.h  xmlparser.cpp  xmlparser.h
tests/: CMakeLists.txt  argParserTest.cpp  feedDownloaderTest.cpp  integration_tests.sh  testFunctions.h  test_feedfile.txt  urlParserTest.cpp  utilsTest.cpp
tests/reference/: ref_atom-a.txt  ref_atom.txt  ref_not_in_order-a.txt  ref_not_in_order-aT.txt  ref_not_in_order-aTu.txt  ref_not_in_order-u.txt  ref_not_in_order.txt  ref_rss-a.txt  ref_rss-u.txt  ref_rss-uT.txt  ref_rss.txt
tests/test_files/: normal.atom  normal.rss  not_in_order.atom
